--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1547,107 +1547,107 @@ stories:
   domain: http://www.chickashanews.com/
   link: https://www.chickashanews.com/peach-bowl-tennessee-indiana/image_f0ffd639-8c9a-5e7c-a56c-221c69db4232.html
 images:
-- name: ellis-island-ellis-island-room-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colored-circuits.jpg
-- name: christianity-christianity-under-construction-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-constitution.jpg
-- name: old-door-lock-old-door-lock-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
-- name: stalin-time-surveillance-3-camers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-3-camers.jpg
+- name: file-00-00-40-84.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-40-84.jpg
+- name: ellis-island-ellis-island-room-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-brush.jpg
+- name: blossombar-deep-connections-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-24-99.jpg
+- name: miamibeach-miamibeach-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-clean-view.jpg
+- name: ellis-island-ellisisland-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-green-zuma.jpg
+- name: old-house-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
+- name: bf-skinner-sub-way-bart-going-by.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sub-way-bart-going-by.jpg
+- name: flower-barbed-wire-flower-barbed-wire-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-satan-red.jpg
+- name: copper-circuit-pigeon_35927783393_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-pigeon_35927783393_o.jpg
+- name: rain-princess-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0048.jpg
+- name: bluelake-crafty-painting-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
+- name: mosaic-face-mosaic-face-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-hot-spicy.jpg
+- name: hollywood-building-hollywood-building-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-satan-red.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+- name: nazi-invasion-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-screaming-face-statue.jpg
+- name: docks-docks-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-bright-sand.jpg
+- name: copper-circuit-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-roman-marcus-looking-down.jpg
+- name: aws-s3-stories-new-cityscape-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-cityscape-copper-circuit.jpg
+- name: old-gas-pumps-oldgaspumps-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purp-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+- name: razorwire-DSC-0080-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-plentiful.jpg
+- name: school-clouds-church-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
+- name: old-gas-pumps-oldgaspumps-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-missle.jpg
+- name: supreme-court-supremecourt-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
 - name: beach-rocks-beach-rocks-currents-hot-spicy.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-hot-spicy.jpg
-- name: 35201856153_61bc075e4b-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
-- name: art-museum-art-museum-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crafty-painting.jpg
-- name: supreme-court-supremecourt-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-pablo-blue.jpg
-- name: nazi-invasion-stairs-down-blue-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-stairs-down-blue-green.jpg
-- name: udnie-IMG_7054.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7054.jpg
-- name: border-fence-border-fence-on-hill-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-nazi-poster.jpg
-- name: server-cloud-server-racks-clouds-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-attack-planes.jpg
-- name: gypsy-wagon-gypsywagon-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
-- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-- name: death-valley-death-valley-national-park-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-sand-paper.jpg
-- name: rockingchair-rockingchair-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-nazi-poster.jpg
-- name: gypsy-wagon-gypsywagon-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-deep-connections.jpg
-- name: nazi-invasion-down-the-line-harlem.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-down-the-line-harlem.jpg
-- name: status-berlin-status-berlin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-electricity.jpg
-- name: christianity-christianity-under-construction-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crabapple.jpg
-- name: meadowbutterfly-meadow-butterfly-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-kand-two.jpg
-- name: old-cabin-oldcabin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-emily-carr.jpg
-- name: paris-paris-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-color.jpg
-- name: hollywood-building-hollywood-building-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-creativity.jpg
-- name: cannon-facing-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
-- name: berlinwall2-berlinwall-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-clean-view.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: paris-paris-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-oily-mcoilface.jpg
-- name: sand-hand-sand-hand-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-rain.jpg
-- name: old-cabin-oldcabin-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-post-modern.jpg
-- name: old-door-lock-old-door-lock-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-really-hot.jpg
-- name: fence-fence-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colorful-dream.jpg
-- name: san-francisco-street-view-san-francisco-street-view-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-feed-people.jpg
-- name: curtain-curtain-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-spagetti-accident.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-neo-instinct.jpg
-- name: yuma-bank-yuma-bak-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-emily-carr.jpg
-- name: stalin-time-statue-face-looking-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-face-looking-up.jpg
-- name: bf-skinner-white-house-west-wing-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-west-wing-view.jpg
-- name: crow_colorful_blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_blocks.jpg
-- name: bf-skinner-soliders-fighting-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-soliders-fighting-statue.jpg
-- name: old-building-clouds-with-tree-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-uncle-sam.jpg
-- name: dc-statue-dcstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-matrix.jpg
-- name: stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
-- name: oldhousecars-house-old-cars-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-brush.jpg
-- name: rain-princess-DSC_0020.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0020.jpg
-- name: stories-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-copper-circuit-2.jpg
-- name: fence-fence-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-light-dali.jpg
-- name: stalin-time-shipping-container-yard-police-boat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-container-yard-police-boat.jpg
-- name: sand-hand-sand-hand-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-sunday.jpg
-- name: statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-- name: docks-docks-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
+- name: copper-circuit-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-ship-in-seattle.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
+- name: mistywoods-babyfoot-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crunch-paper.jpg
+- name: oldhotel-oldhotel-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-granite.jpg
+- name: oldhotel-oldhotel-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
+- name: nazi-invasion-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hotel-down-sidewalk.jpg
+- name: braceros-domingo-ulloa-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-building-shadows-sun.jpg
+- name: bluelake-post-modern-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-01-17-38.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kandinsky-bv.jpg
+- name: stalin-time-memorial-to-the-jews-in-berlin-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-memorial-to-the-jews-in-berlin-2.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit.jpg
+- name: mosaic-face-mosaic-face-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
+- name: miamibeach-miamibeach-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alberto-giacometti.jpg
+- name: lincoln-memorial-lincolnmemorial-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-emily-carr.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-missle.jpg
+- name: flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+- name: white-house-whitehouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-green-zuma.jpg
+- name: bluelake-green-zuma-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-38-67.jpg
+- name: rain-princess-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital-records-building.jpg
+- name: copper-circuit-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-google-front-of-business.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
+- name: old-cabin-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alien-goggles.jpg
+- name: powerlines-power-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-brush.jpg
+- name: razorcliff-razorcliff-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sand-paper.jpg
 ---
 Revelers Around The World Usher In The New Decade.&nbsp;Habitat For Humanity Put A House Over, Instead Of Under, Lincoln Park Familys Tree.&nbsp;Joanne Alice Roalstad Jones.&nbsp;Amateur Radio Operators Simulate Local Emergency.&nbsp;Teen Climber Rescued After Fall On Oregon's Mount Hood.&nbsp;Revelers Around The World Usher In The New Decade.&nbsp;Bernhard Capital Investing In Ascension Sewer Company.&nbsp;Lights Throttle Vikings During Duck Inn Holiday Classic.&nbsp;
